RESOLVED FIXED68246
Chromium: Fix repaint of rubber-band overhang area under composited path
https://bugs.webkit.org/show_bug.cgi?id=68246
Summary Chromium: Fix repaint of rubber-band overhang area under composited path
asvitkine
Reported 2011-09-16 07:51:06 PDT
Chromium: Fix repaint of rubber-band overhang area under composited path
Attachments
Patch (1.72 KB, patch)
2011-09-16 07:55 PDT, asvitkine
no flags
Patch (53.88 KB, patch)
2011-09-16 09:17 PDT, asvitkine
no flags
asvitkine
Comment 1 2011-09-16 07:55:38 PDT
asvitkine
Comment 2 2011-09-16 07:58:08 PDT
James, could you review this? (Also, if you have a suggestion on how to test this, I'll gladly add a layout test. But simply calling calling scrollContents() twice from the test doesn't have the desired effect - since there's no repaint between them to reset the invalidation.)
asvitkine
Comment 3 2011-09-16 09:17:45 PDT
asvitkine
Comment 4 2011-09-16 09:18:07 PDT
Found a way to test this. New patch with layout test.
WebKit Review Bot
Comment 5 2011-09-16 20:46:43 PDT
Comment on attachment 107660 [details] Patch Clearing flags on attachment: 107660 Committed r95361: <http://trac.webkit.org/changeset/95361>
WebKit Review Bot
Comment 6 2011-09-16 20:46:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.