Chromium: Fix repaint of rubber-band overhang area under composited path https://bugs.webkit.org/show_bug.cgi?id=68246

I accidently removed these two lines from the last patch on: https://bugs.webkit.org/show_bug.cgi?id=66969

Patch by Alexei Svitkine <asvitkine@chromium.org> on 2011-09-16
Reviewed by James Robinson.

Test: platform/chromium-gpu/compositing/rubberbanding/transform-overhang-size-change.html

Source/WebCore:

* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollContents):

LayoutTests:

* platform/chromium-gpu/compositing/rubberbanding/transform-overhang-size-change-expected.png: Added.
* platform/chromium-gpu/compositing/rubberbanding/transform-overhang-size-change-expected.txt: Added.
* platform/chromium-gpu/compositing/rubberbanding/transform-overhang-size-change.html: Added.

Canonical link: https://commits.webkit.org/84230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95361 268f45cc-cd09-0410-ab3c-d52691b4dbfc